docs: swagger comments updated
