# src/routes/locais.routes.js
@@ -11,19 +11,28 @@ localRoutes.post('/', LocalController.cadastrarLocal
     #swagger.description = 'Cadastra um novo local'
     #swagger.parameters['obj'] = {
         in: 'body',
-        description: 'Informa os dados do local',
+        description: 'Informe os dados do local',
         required: true,
         schema: { 
-            $nome: 'Nome do Local',
-            $descricao: 'Descrição do Local',
-            $cep: 'CEP padrão 00000000',
-            $logradouro: 'Logradouro',
-            $numero: 'Numero',
-            $complemento: 'Complemento',
-            $municipio: 'Município',
-            $usuarioId: 'ID do Usuário',
-            $uf: 'UF',
-            $atividade: [1] 
+            $nome: 'Local teste',
+            $descricao: 'descricao local teste',
+            $cep: '88047470',
+            $logradouro: 'logradouro teste',
+            $municipio: 'municipio teste',
+            $numeroCasa: '150',
+            $complemento: '1',
+            $uf: 'SC',
+            $atividades: { 
+                "surf": false,
+                "skate": true, 
+                "ciclismo": false,
+                "natação": true, 
+                "corrida": false,
+                "caminhada": true,
+                "trilha": false,
+                "musculacao": true,
+                "futebol": false
+            } 
         }
     }
     #swagger.responses[201] = { 
@@ -47,7 +56,7 @@ localRoutes.get('/', LocalController.listarLocais
     #swagger.tags = ['Local']
     #swagger.path = '/locais'
     #swagger.method = 'get'
-    #swagger.description = 'Lista todos os locais'
+    #swagger.description = 'Lista todos os locais do usuario logado'
     #swagger.responses[200] = {
         description: 'OK'        
     }
@@ -68,7 +77,7 @@ localRoutes.get('/:id', LocalController.listarPorId
     #swagger.tags = ['Local']
     #swagger.path = '/locais/{id}'
     #swagger.method = 'get'
-    #swagger.description = 'Lista um local'
+    #swagger.description = 'Lista um local por Id do isuario logado'
     #swagger.responses[200] = {
         description: 'OK'        
     }
@@ -92,7 +101,7 @@ localRoutes.get('/:id/maps', LocalController.pegarUrlMapa
     #swagger.tags = ['Local']
     #swagger.path = '/locais/{id}/maps'
     #swagger.method = 'get'
-    #swagger.description = 'Pegar a url do mapa do local'
+    #swagger.description = 'Pegar a url do mapa do local pelo id'
     #swagger.responses[200] = {
         description: 'OK'        
     }
@@ -129,9 +138,9 @@ localRoutes.delete('/:id', LocalController.deletarLocal
     #swagger.tags = ['Local']
     #swagger.path = '/locais/{id}'
     #swagger.method = 'delete'
-    #swagger.description = 'Deleta um local'
-    #swagger.responses[204] = {
-        description: 'No Content'        
+    #swagger.description = 'Deleta um local pelo id'
+    #swagger.responses[200] = {
+        description: 'Local excluído com sucesso'        
     }
     #swagger.responses[401] = {
         description: 'Unauthorized'        
@@ -154,7 +163,7 @@ localRoutes.put('/:id', LocalController.atualizarLocal
     #swagger.tags = ['Local']
     #swagger.path = '/locais/{id}'
     #swagger.method = 'put'
-    #swagger.description = 'Atualiza um local'
+    #swagger.description = 'Atualiza um local pelo id'
     #swagger.responses[200] = {
         description: 'OK'        
     }
